docs: update exampes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "automoduse"
 version = "1.0.0"
 authors = ["David Tolnay <dtolnay@gmail.com>", "Yuuki Rika <yvvki@kekkon.nexus>"]
 categories = ["development-tools::build-utils", "filesystem", "no-std", "no-std::no-alloc"]
-description = "Pull in every source file in a directory as a module."
+description = "Pull in every source file in a directory as a module and optionally re-export their contents."
 documentation = "https://docs.rs/automoduse"
 edition = "2021"
 license = "MIT OR Apache-2.0"
